button mobile fix

--- a/main.css
+++ b/main.css
@@ -1940,7 +1940,7 @@
 			opacity: 0.25;
 		}
 
-		@media screen and (max-width: 480px) {
+		/*@media screen and (max-width: 480px) {
 
 			input[type="submit"],
 			input[type="reset"],
@@ -1950,7 +1950,7 @@
 				padding: 0;
 			}
 
-		}
+		}*/
 
 	input[type="submit"],
 	input[type="reset"],
